(feature): adding prisma ORM

--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "server",
+  "name": "blog-server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dist": "tsup src",
+    "start:dev": "tsx --env-file=.env ./src/server.ts",
+    "start:watch": "tsx watch --env-file=.env ./src/server.ts",
+    "start:dist": "npm run dist && node --env-file=.env dist/src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "prisma": "^6.6.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
