--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
     "prisma": "^6.6.0",
     "tsup": "^8.4.0",
@@ -24,9 +26,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "aws-sdk": "^2.1692.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.2",
     "path": "^0.12.7"
   }
 }
