--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/lib-storage": "^3.787.0",
     "@prisma/client": "^6.6.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
