--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "path": "^0.12.7"
   }
