--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
     "prisma": "^6.6.0",
